vivek database compatible changes