@@ -10,11 +10,9 @@ import com.lcwd.user.service.services.UserService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
@@ -43,6 +41,11 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
+    public String greeting() {
+        return "Hello Vivek !!";
+    }
+
+    @Override
     public List<User> getAllUser() {
         //implement RATING SERVICE CALL: USING REST TEMPLATE
         return userRepository.findAll();
@@ -58,7 +61,7 @@ public class UserServiceImpl implements UserService {
 
         Rating[] ratingsOfUser = restTemplate.getForObject("http://RATING-SERVICE/ratings/users/" + user.getUserId(), Rating[].class);
         logger.info("{} ", ratingsOfUser);
-        List<Rating> ratings = Arrays.stream(ratingsOfUser).toList();
+        List<Rating> ratings = Arrays.stream(ratingsOfUser).collect(Collectors.toList());
         List<Rating> ratingList = ratings.stream().map(rating -> {
             //api call to hotel service to get the hotel
             //http://localhost:8082/hotels/1cbaf36d-0b28-4173-b5ea-f1cb0bc0a791
